<?xml version="1.0"?>
<package format="2">
  <name>publish_pose_from_tf</name>
  <version>0.0.0</version>
  <description>Publish geometry_msgs/PoseStamped from listened tf</description>
  <maintainer email="fujimoto@todo.todo">fujimoto</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
</package>
